--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,8 @@
       }
     </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <base href="%PUBLIC_URL%/" />
+    <title>Ourtube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
